🔧 add package name to dictionary

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,7 @@
 {
-        "editor.detectIndentation": false,
-        "editor.tabSize": 4
+    "editor.detectIndentation": false,
+    "editor.tabSize": 4,
+    "cSpell.words": [
+        "goreddit"
+    ]
 }
